--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -81,7 +81,7 @@
 
     <!-- Start Footer -->
     <footer class="container-fluid bg-dark text-center p-2 mt-5">
-        <small class="text-white">Designed with &#10084; by <b>Prabhjot Singh</b></small>
+        <small class="text-white">Designed with &#10084; by <b><a href="https://www.linkedin.com/in/prabhjot-singh-chugh/" style="border:none; outline:none; text-decoration:none; color:inherit;">Prabhjot Singh</a></b></small>
     </footer> <!-- End Footer -->
 
     <!-- Jquery -->
