--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -20,6 +20,7 @@
 
 
     <title>MNPJ Creations {% block title %} {% endblock title %} </title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'app/images/banner/img.png' %}">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-white bg-white">
